test/files/invalid/aligned.fbs
struct Aligned (force_align: 16) {
  v: uint8;
}

struct Aligned2 {
  v: uint8 (force_align: 16);
}
