test/files/invalid/aligned.stderr
error: Metadata attribute is not currently supported on structs
  ┌─ test/files/invalid/aligned.fbs:1:17
  │
1 │ struct Aligned (force_align: 16) {
  │                 ^^^^^^^^^^^^^^^

error: Metadata attribute does not make sense on struct fields
  ┌─ test/files/invalid/aligned.fbs:6:13
  │
6 │   v: uint8 (force_align: 16);
  │             ^^^^^^^^^^^^^^^

Error: Bailing because of errors
